--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "daisyui": "^5.5.14",
+    "mongodb": "^7.0.0",
     "next": "16.1.0",
+    "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.11",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
+    "sweetalert2": "^11.26.15"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
