--- a/package.json
+++ b/package.json
@@ -11,21 +11,28 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "daisyui": "^5.5.14",
+    "dayjs": "^1.11.19",
+    "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.26",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
-    "next": "16.1.0",
+    "mongoose": "^9.0.2",
+    "next": "^16.1.0",
     "next-auth": "^4.24.13",
-    "nodemailer": "^7.0.11",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "nodemailer": "^7.0.12",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-hook-form": "^7.69.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "sweetalert2": "^11.26.15"
+    "slugify": "^1.6.6",
+    "sweetalert2": "^11.26.17"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.0",
-    "tailwindcss": "^4"
-  },
-  "browserslist": "> 1%"
+    "@tailwindcss/postcss": "^4.1.18",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.0",
+    "tailwindcss": "^4.1.18"
+  }
 }
